Resized image to solve image problems and fixed alignment of items in meal calendar

--- a/client/styles/mealplanner/MealCalendar.styl
+++ b/client/styles/mealplanner/MealCalendar.styl
@@ -76,8 +76,8 @@ div.dinner
   color: black
 
 .calendar-checkbox
-  display: inline-block
+  float: left
+  margin-right: 5px
 
 .calendar-item-container > div.calendar-item-title
-  display: inline-block
   font-size: small
